# simple-exercises-cpp-fundamentals

./: .gitignore  README.md
STL-basics/concatenateVector/: 02-concatenateVector.cpp  CMakeLists.txt
STL-basics/createMap/: 04-createMap.cpp  CMakeLists.txt
STL-basics/createSortedList/: 03-createSortedList.cpp  CMakeLists.txt
STL-basics/printVector/: 01-printVector.cpp  CMakeLists.txt
calculateProduct/: 05-calculateProduct.cpp
language_elements/max/: 02-max.cpp  CMakeLists.txt
language_elements/multiply/: 01-multiply.cpp  CMakeLists.txt
language_elements/printString/: 03-printString.cpp  CMakeLists.txt
modifyPointers/: 03-modifyPointers.cpp
modifyString/: main.cpp
sharedPtr/: 04-sharedPtr.cpp  CMakeLists.txt
table_filled_with_odds/: main.cpp
types/calculateProduct/: CMakeLists.txt
types/modifyPointers/: CMakeLists.txt
types/table_filled_with_odds/: CMakeLists.txt
